cleanup ui/pom.xml